tests/paczka1/small_fuzzy/53154973.err
Error in line 7: mpnxS3 S507 18,1
Error in line 5: uNuFH4T1n A203 121,8
Error in line 10: AJzqw S436 86,9
